修复重新加载bootstrap.js导致下拉菜单失效；修复#11

--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@
 <body class="page-body">
   <div id="app"></div>
   <!-- built files will be auto injected -->
-  <!-- <script src="./assets/js/jquery-1.11.1.min.js"></script>
+  <script src="./assets/js/jquery-1.11.1.min.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
-  <script src="./assets/js/TweenMax.min.js"></script>
+  <!--<script src="./assets/js/TweenMax.min.js"></script>
   <script src="./assets/js/resizeable.js"></script>
   <script src="./assets/js/joinable.js"></script>
   <script src="./assets/js/xenon-api.js"></script>
